[package]
name = "tokio-compat-seek"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3" }
anyhow = "1"
tokio = { version = "1", default-features = false, features = ["rt", "macros", "fs", "io-util", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
